--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,24 @@
+@font-face {
+    font-family: "Montserrat";
+    src: url(../fonts/Montserrat-VariableFont_wght.ttf);
+    font-style: normal;
+    font-display: swap;
+}
+
 :root{
+    --primary-color: #8F0101;
+    --secundary-color: #B81515;
+        
     --background-primary-color: #FFFFFF;
     --background-secundary-color: #F5F5F5;
     --background-tertiary-color: #0000;
 
-    --button-primary-color: #8F0101;
-    --button-secundary-color: #B81515;
-
     --text-primary-color: #222222;
     --text-secundary-color: #FFFFFF;
+
+    --title-weight: 700;
+    --text-weight: 400;
+    --menu-text-weight: 500;
     }
 
 *{
