--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,28 @@
 @font-face {
-    font-family: "Montserrat";
-    src: url(../fonts/Montserrat-VariableFont_wght.ttf);
-    font-style: normal;
-    font-display: swap;
+  font-family: "Montserrat";
+  src: url(../fonts/Montserrat-VariableFont_wght.ttf);
+  font-style: normal;
+  font-display: swap;
 }
 
-:root{
-    --primary-color: #8F0101;
-    --secundary-color: #B81515;
-        
-    --background-primary-color: #FFFFFF;
-    --background-secundary-color: #F5F5F5;
-    --background-tertiary-color: #0000;
+:root {
+  --primary-color: #8f0101;
+  --secundary-color: #b81515;
 
-    --text-primary-color: #222222;
-    --text-secundary-color: #FFFFFF;
+  --background-primary-color: #ffffff;
+  --background-secundary-color: #f5f5f5;
+  --background-tertiary-color: #0000;
 
-    --title-weight: 700;
-    --text-weight: 400;
-    --menu-text-weight: 500;
-    }
+  --text-primary-color: #222222;
+  --text-secundary-color: #ffffff;
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  --title-weight: 700;
+  --text-weight: 400;
+  --menu-text-weight: 500;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
